--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -1,1 +1,7 @@
-name=PiperCN{0}
+name=PiperCN
+menu.a.tip=请使用小助手
+menu.a.mypublisher=我的出版社
+menu.a.gosub=去订阅
+menu.a.mysublist=我的订阅列表
+menu.a.group=管理邮件群发
+menu.a.createpublisher=创建个人出版社
