--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -1,7 +1,7 @@
 name=PiperUS
-menu.a.tip=please use helper
+menu.a.tip=Please use helper
 menu.a.mypublisher=My Publiser
-menu.a.gosub=go Subcripting
+menu.a.gosub=Go Subcripting
 menu.a.mysublist=My Subcription List
-menu.a.group=Magager Mail Group
+menu.a.group=Magage Mail Group
 menu.a.createpublisher=Create Personal Publiser
