国际化处理

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -5,3 +5,39 @@ menu.a.gosub=Go Subcripting
 menu.a.mysublist=My Subcription List
 menu.a.group=Magage Mail Group
 menu.a.createpublisher=Create Personal Publiser
+
+menu.p.tip=Please use helper
+menu.p.managesub=Manange Subscribers
+menu.p.accountupload=Excel Upload  
+
+msg.ordertip=send （'subcripte' 或 '1'） to subcripte this Publish
+msg.hassend= has sent
+msg.noreply=this function cann't be supported
+msg.nopermission=you have no permission to operate
+msg.publisherhascreate=Publish < {0} > establish success，subcription address is：
+msg.pcreatetip= < {0} > establish success，the content you send will hand out subscribers
+msg.beoranger=< {0} > become an Organization Manager 
+msg.canceladmin=< {0} > cancel your Organization Manager Permission
+msg.becanceled=< {0} > has be canceled Organization Manager Permission
+
+msg.adminsendtip=This publish manager invite you join in this group ,he/she will send content for you soon.
+msg.noemail=Email is not exist
+
+
+ex.nocommend=it has not be recommended
+ex.hascommend=it has be recommended
+ex.nosupport=this publish cann't be supported
+ex.needorganizer= Need Organization Manager Permission
+ex.userid.null=temail or userId is null
+ex.email.invalid=  Invalid Email:   
+ex.publisherid.null=publishId is null
+ex.publisher.null=publish is not exist
+ex.publisher.exist=publish has exist
+ex.subcribe.null=user is not subcribe
+ex.contentid.null=contentId is null
+ex.content.null=content is null
+ex.name.null=name is null
+ex.name.invalid=Field names can contain only letters, numbers. 
+ex.tokenInvalid =Token is invalid
+ex.sql.err=Sql error!
+ex.system.err=system error，please connect with email：504963782@qq.com
