--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -5,3 +5,39 @@ menu.a.gosub=去订阅
 menu.a.mysublist=我的订阅列表
 menu.a.group=管理邮件群发
 menu.a.createpublisher=创建个人出版社
+
+menu.p.tip=请使用小助手
+menu.p.managesub=管理订阅人
+menu.p.accountupload=Excel账号上传说明
+
+msg.ordertip=您尚未订阅该出版社 发送 （'订阅' 或 '1'） 订阅该出版社
+msg.hassend=人已发送
+msg.noreply=回复功能暂不支持
+msg.nopermission=只有创建者有权操作
+msg.publisherhascreate=出版社 < {0} > 创建成功，订阅地址为：
+msg.pcreatetip= < {0} > 创建成功，您发的所有消息都会同步到订阅者
+msg.beoranger=< {0} > 成为一个组织管理员
+msg.canceladmin=< {0} > 取消了你的管理员权限
+msg.becanceled=< {0} > 被你取消了管理员权限
+
+msg.adminsendtip=管理员邀请您进入该邮件组，之后管理员会在这给您发文档或消息
+msg.noemail=邮箱不存在
+
+
+ex.nocommend=还没有被推荐了
+ex.hascommend=已经被推荐
+ex.nosupport=该出版社类型不支持
+ex.needorganizer=需要组织管理权限
+ex.userid.null=用户秘邮号为空
+ex.email.invalid= 非法邮箱:   
+ex.publisherid.null=生产源Id为空
+ex.publisher.null=生产源不存在
+ex.publisher.exist=生产源已经存在
+ex.subcribe.null=用户并未订阅
+ex.contentid.null=内容Id为空
+ex.content.null=内容为空
+ex.name.null=名称为空
+ex.name.invalid=名称只能是中文、字母、数字及组合
+ex.tokenInvalid =Token失效
+ex.sql.err=数据库错误!
+ex.system.err=系统异常，邮箱：504963782@qq.com
