--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -4,7 +4,7 @@ menu.a.mypublisher=My Publiser
 menu.a.gosub=Go Subcripting
 menu.a.mysublist=My Subcription List
 menu.a.group=Magage Mail Group
-menu.a.createpublisher=Create Personal Publiser
+menu.a.createpublisher=Establish Personal Publiser
 
 menu.p.tip=Please use helper
 menu.p.managesub=Manange Subscribers
@@ -15,7 +15,7 @@ msg.hassend= has sent
 msg.noreply=this function cann't be supported
 msg.nopermission=you have no permission to operate
 msg.publisherhascreate=Publish < {0} > establish success，subcription address is：
-msg.pcreatetip= < {0} > establish success，the content you send will hand out subscribers
+msg.pcreatetip= < {0} > establish success，the content you send will hand out all subscribers
 msg.beoranger=< {0} > become an Organization Manager 
 msg.canceladmin=< {0} > cancel your Organization Manager Permission
 msg.becanceled=< {0} > has be canceled Organization Manager Permission
@@ -33,6 +33,7 @@ ex.email.invalid=  Invalid Email:
 ex.publisherid.null=publishId is null
 ex.publisher.null=publish is not exist
 ex.publisher.exist=publish has exist
+ex.publisher.creating=publish is establishing
 ex.subcribe.null=user is not subcribe
 ex.contentid.null=contentId is null
 ex.content.null=content is null
