--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -33,6 +33,7 @@ ex.email.invalid= 非法邮箱:
 ex.publisherid.null=生产源Id为空
 ex.publisher.null=生产源不存在
 ex.publisher.exist=生产源已经存在
+ex.publisher.creating=正在创建中，请耐心等待
 ex.subcribe.null=用户并未订阅
 ex.contentid.null=内容Id为空
 ex.content.null=内容为空
