--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -19,6 +19,7 @@ msg.pcreatetip= < {0} > establish success，the content you send will hand out a
 msg.beoranger= < {0} > become an Organization Manager 
 msg.canceladmin= < {0} > cancel your Organization Manager Permission
 msg.becanceled= < {0} > has be canceled Organization Manager Permission
+msg.submotice= < {0} > subcripte this publish
 
 msg.adminsendtip= This publish manager invite you join in this group ,he/she will send content for you soon.
 msg.noemail= Email is not exist
