--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -1,13 +1,14 @@
 name=PiperUS
 menu.a.tip=Please use helper
 menu.a.mypublisher=My Publiser
-menu.a.gosub=Go Subcripting
+menu.a.gosub=Recommend Square
 menu.a.mysublist=My Subcription List
 menu.a.group=Magage Mail Group
 menu.a.createpublisher=Establish Personal Publiser
 
 menu.p.tip=Please use helper
 menu.p.managesub=Manange Subscribers
+menu.p.history=Content History
 menu.p.accountupload=Excel Upload  
 
 msg.ordertip= send （'subcripte' 或 '1'） to subcripte this Publish
