--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -1,13 +1,14 @@
 name=PiperCN
 menu.a.tip=请使用小助手
 menu.a.mypublisher=我的出版社
-menu.a.gosub=去订阅
+menu.a.gosub=订阅推荐广场
 menu.a.mysublist=我的订阅列表
 menu.a.group=管理邮件群发
 menu.a.createpublisher=创建个人出版社
 
 menu.p.tip=请使用小助手
 menu.p.managesub=管理订阅人
+menu.p.history=历史消息
 menu.p.accountupload=Excel账号上传说明
 
 msg.ordertip=您尚未订阅该出版社 发送 （'订阅' 或 '1'） 订阅该出版社
