--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -14,7 +14,7 @@ menu.p.accountupload=Excel Upload
 msg.ordertip= send （'subcripte' 或 '1'） to subcripte this Publish
 msg.hassend=  people has sent
 msg.noreply= this function cann't be supported
-msg.nopermission= you have no permission to operate
+msg.nopermission= Only Establisher can operate
 msg.publisherhascreate= Publish < {0} > establish success，subcription address is：
 msg.pcreatetip= < {0} > establish success，the content you send will hand out all subscribers
 msg.beoranger= < {0} > become an Organization Manager 
