--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -1,46 +1,46 @@
 name=PiperUS
 menu.a.tip=Please use helper
-menu.a.mypublisher=My Publiser
-menu.a.gosub=Recommend Square
+menu.a.mypublisher=My Publisher
+menu.a.gosub=Recommendation Square
 menu.a.mysublist=My Subcription List
-menu.a.group=Magage Mail Group
-menu.a.createpublisher=Establish Personal Publiser
+menu.a.group=Magaging Groups
+menu.a.createpublisher=Establish Personal Publisher
 
 menu.p.tip=Please use helper
-menu.p.managesub=Manange Subscribers
-menu.p.history=Content History
+menu.p.managesub=Mananging Subscribers
+menu.p.history=History
 menu.p.accountupload=Excel Upload  
 
-msg.ordertip= send （'subcripte' 或 '1'） to subcripte this Publish
-msg.hassend=  people has sent
-msg.noreply= this function cann't be supported
+msg.ordertip= Send （'subcripte' or '1'） to subcripte this Publisher
+msg.hassend=  People has sent
+msg.noreply= This function cann't be supported
 msg.nopermission= Only Establisher can operate
-msg.publisherhascreate= Publish < {0} > establish success，subcription address is：
-msg.pcreatetip= < {0} > establish success，the content you send will hand out all subscribers
-msg.beoranger= < {0} > become an Organization Manager 
-msg.canceladmin= < {0} > cancel your Organization Manager Permission
-msg.becanceled= < {0} > has be canceled Organization Manager Permission
-msg.submotice= < {0} > subcripte this publish
+msg.publisherhascreate= Publisher <{0}> has established success，subcription address is：
+msg.pcreatetip= <{0}> has established success，the content you send will hand out all subscribers
+msg.beoranger= <{0}> become a Group Manager 
+msg.canceladmin= <{0}> cancel your Group Manager Permission
+msg.becanceled= <{0}> has be canceled Group Manager Permission
+msg.submotice= <{0}> subcripte this Publisher
 
-msg.adminsendtip= This publish manager invite you join in this group ,he/she will send content for you soon.
+msg.adminsendtip= This Group Manager invite you join in ,he/she will send content for you soon.
 msg.noemail= Email is not exist
 
 
-ex.nocommend= it has not be recommended
-ex.hascommend= it has be recommended
-ex.nosupport= this publish cann't be supported
-ex.needorganizer= Need Organization Manager Permission
-ex.userid.null= temail or userId is null
+ex.nocommend= It has not been recommended
+ex.hascommend= It has been recommended
+ex.nosupport= This Publisher cann't be supported
+ex.needorganizer= Need Group Manager Permission
+ex.userid.null= Temail or userId is null
 ex.email.invalid=  Invalid Email:   
-ex.publisherid.null= publishId is null
-ex.publisher.null= publish is not exist
-ex.publisher.exist= publish has exist
-ex.publisher.creating= publish is establishing
-ex.subcribe.null= user is not subcribe
-ex.contentid.null= contentId is null
-ex.content.null= content is null
-ex.name.null= name is null
+ex.publisherid.null= PublisherId is null
+ex.publisher.null= Publisher is not exist
+ex.publisher.exist= Publisher has exist
+ex.publisher.creating= Publisher is establishing
+ex.subcribe.null= User do not subcribe
+ex.contentid.null= ContentId is null
+ex.content.null= Content is null
+ex.name.null= Name is null
 ex.name.invalid= Field names can contain only letters, numbers. 
 ex.tokenInvalid = Token is invalid
 ex.sql.err= Sql error!
-ex.system.err= system error，please connect with email：504963782@qq.com
+ex.system.err= System error，please connect with email：504963782@qq.com
