统一前后端翻译

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -3,11 +3,11 @@ menu.a.tip=Please use helper
 menu.a.mypublisher=My Publisher
 menu.a.gosub=Recommendation Square
 menu.a.mysublist=My Subcription List
-menu.a.group=Magaging Groups
+menu.a.group=Managing Groups
 menu.a.createpublisher=Establish Personal Publisher
 
 menu.p.tip=Please use helper
-menu.p.managesub=Mananging Subscribers
+menu.p.managesub=Managing Subscribers
 menu.p.history=History
 menu.p.accountupload=Excel Upload  
 
