修复对 zh-Hans的支持

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -25,7 +25,7 @@ msg.submotice= <{0}> subcripte this Publisher
 msg.adminsendtip= This Group Manager invite you join in ,he/she will send content for you soon.
 msg.noemail= Email is not exist
 
-
+ex.demain.err= <{0}> Demain Error,Only support {1}!
 ex.nocommend= It has not been recommended
 ex.hascommend= It has been recommended
 ex.nosupport= This Publisher cann't be supported
