--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -25,7 +25,7 @@ msg.submotice= <{0}> 订阅了该的出版社
 msg.adminsendtip=管理员邀请您进入该邮件组，之后管理员会在这给您发文档或消息
 msg.noemail=邮箱不存在
 
-
+ex.demain.err= <{0}> 域错误，只支持 {1}!
 ex.nocommend=还没有被推荐了
 ex.hascommend=已经被推荐
 ex.nosupport=该出版社类型不支持
