七牛云支持登录

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -37,6 +37,7 @@ ex.publisher.null= Publisher is not exist
 ex.publisher.exist= Publisher has exist
 ex.publisher.creating= Publisher is establishing
 ex.subcribe.null= User do not subcribe
+ex.subcribe.have= You have subcribed 
 ex.contentid.null= ContentId is null
 ex.content.null= Content is null
 ex.name.null= Name is null
