--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -37,6 +37,7 @@ ex.publisher.null=生产源不存在
 ex.publisher.exist=生产源已经存在
 ex.publisher.creating=正在创建中，请耐心等待
 ex.subcribe.null=用户并未订阅
+ex.subcribe.have= 你已经订阅过了
 ex.contentid.null=内容Id为空
 ex.content.null=内容为空
 ex.name.null=名称为空
