兼容新版 协同应用菜单

--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -16,7 +16,7 @@ msg.hassend= 人已发送
 msg.noreply=回复功能暂不支持
 msg.nopermission=只有创建者有权操作
 msg.publisherhascreate=出版社 <{0}> 创建成功，订阅地址为：
-msg.pcreatetip= <{0}> 创建成功，您发的所有消息都会同步到订阅者
+msg.pcreatetip= <{0}> 创建成功，您发的消息将发达所有订阅者
 msg.beoranger=<{0}> 成为一个组织管理员
 msg.canceladmin=<{0}> 取消了你的管理员权限
 msg.becanceled=<{0}> 被你取消了管理员权限
