准备接入 Piper 申请激活邮箱接口

--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -22,6 +22,8 @@ msg.canceladmin=<{0}> 取消了你的管理员权限
 msg.becanceled=<{0}> 被你取消了管理员权限
 msg.submotice= <{0}> 订阅了该的出版社
 
+msg.changetip= <{0}> 成为了该群组新管理员 
+
 msg.adminsendtip=管理员邀请您进入该邮件组，之后管理员会在这给您发文档或消息
 msg.noemail=邮箱不存在
 
@@ -31,7 +33,7 @@ ex.hascommend=已经被推荐
 ex.nosupport=该出版社类型不支持
 ex.needorganizer=需要组织管理权限
 ex.userid.null=用户秘邮号为空
-ex.email.invalid= 非法邮箱:   
+ex.email.invalid= 非法邮箱!
 ex.publisherid.null=生产源Id为空
 ex.publisher.null=生产源不存在
 ex.publisher.exist=生产源已经存在
@@ -43,5 +45,5 @@ ex.content.null=内容为空
 ex.name.null=名称为空
 ex.name.invalid=名称只能是中文、字母、数字及组合
 ex.tokenInvalid =Token失效
-ex.sql.err=数据库错误!
+ex.sql.err=数据库操作错误!
 ex.system.err=系统异常，邮箱：luohongzhou1@syswin.com
