--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -22,6 +22,8 @@ msg.canceladmin= <{0}> cancel your Group Manager Permission
 msg.becanceled= <{0}> has be canceled Group Manager Permission
 msg.submotice= <{0}> subcripte this Publisher
 
+msg.changetip= <{0}> become new owner
+
 msg.adminsendtip= This Group Manager invite you join in ,he/she will send content for you soon.
 msg.noemail= Email is not exist
 
