--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -10,6 +10,7 @@ menu.p.tip=Please use helper
 menu.p.managesub=Managing Subscribers
 menu.p.history=History
 menu.p.accountupload=Excel Upload  
+menu.p.changeuserid=Change Manager 
 
 msg.ordertip= Send （'subcripte' or '1'） to subcripte this Publisher
 msg.hassend=  People has sent
