--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -5,6 +5,7 @@ menu.a.gosub=订阅推荐广场
 menu.a.mysublist=我的订阅列表
 menu.a.group=管理邮件群发
 menu.a.createpublisher=创建个人出版社
+menu.p.changeuserid=更换管理员
 
 menu.p.tip=请使用小助手
 menu.p.managesub=管理订阅人
