集成ps sdk  兼容版本开发

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -23,7 +23,7 @@ msg.canceladmin= <{0}> cancel your Group Manager Permission
 msg.becanceled= <{0}> has be canceled Group Manager Permission
 msg.submotice= <{0}> subcripte this Publisher
 
-msg.changetip= <{0}> become new owner
+msg.changetip= <{0}> become new owner,please come in again update Menu
 
 msg.adminsendtip= This Group Manager invite you join in ,he/she will send content for you soon.
 msg.noemail= Email is not exist
