--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -15,7 +15,7 @@ menu.p.accountupload=Excel账号上传说明
 msg.ordertip=您尚未订阅该出版社 发送 （'订阅' 或 '1'） 订阅该出版社
 msg.hassend= 人已发送
 msg.noreply=回复功能暂不支持
-msg.nopermission=只有创建者有权操作
+msg.nopermission=只有该群组管理员有权操作
 msg.publisherhascreate=出版社 <{0}> 创建成功，订阅地址为：
 msg.pcreatetip= <{0}> 创建成功，您发的消息将发达所有订阅者
 msg.beoranger=<{0}> 成为一个组织管理员
@@ -23,7 +23,7 @@ msg.canceladmin=<{0}> 取消了你的管理员权限
 msg.becanceled=<{0}> 被你取消了管理员权限
 msg.submotice= <{0}> 订阅了该的出版社
 
-msg.changetip= <{0}> 成为了该群组新管理员 
+msg.changetip= <{0}> 成为了该群组新管理员,请退出会话再次进入刷新菜单
 
 msg.adminsendtip=管理员邀请您进入该邮件组，之后管理员会在这给您发文档或消息
 msg.noemail=邮箱不存在
