1、修改进入出版社自动订阅。 增加订阅提醒

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -22,6 +22,7 @@ msg.beoranger= <{0}> become a Group Manager
 msg.canceladmin= <{0}> cancel your Group Manager Permission
 msg.becanceled= <{0}> has be canceled Group Manager Permission
 msg.submotice= <{0}> subcripte this Publisher
+msg.subsec= subcripte success!
 
 msg.changetip= <{0}> become new owner,please come in again update Menu
 
