--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -21,7 +21,8 @@ msg.pcreatetip= <{0}> 创建成功，您发的消息将发达所有订阅者
 msg.beoranger=<{0}> 成为一个组织管理员
 msg.canceladmin=<{0}> 取消了你的管理员权限
 msg.becanceled=<{0}> 被你取消了管理员权限
-msg.submotice= <{0}> 订阅了该的出版社
+msg.submotice= <{0}> 订阅了该出版社
+msg.subsec=订阅成功，作者会在此为你发文章
 
 msg.changetip= <{0}> 成为了该群组新管理员,请退出会话再次进入刷新菜单
 
