1、添加获取页签接口

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -3,6 +3,8 @@ menu.a.tip=Please use helper
 menu.a.mypublisher=My Publisher
 menu.a.gosub=Recommendation Square
 menu.a.mysublist=My Subcription List
+mark.a.OrgSubsions=OrgSubsions
+mark.a.PersonSubsions=PersonSubsions
 menu.a.group=Managing Groups
 menu.a.createpublisher=Establish Personal Publisher
 
