--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -3,6 +3,8 @@ menu.a.tip=请使用小助手
 menu.a.mypublisher=我的出版社
 menu.a.gosub=订阅推荐广场
 menu.a.mysublist=我的订阅列表
+mark.a.OrgSubsions=邮件组
+mark.a.PersonSubsions=个人出版社
 menu.a.group=管理邮件群发
 menu.a.createpublisher=创建个人出版社
 menu.p.changeuserid=更换管理员
