发送文章转为801格式 增加业务逻辑

--- a/src/main/resources/i18n/lang_en_US.properties
+++ b/src/main/resources/i18n/lang_en_US.properties
@@ -14,12 +14,12 @@ menu.p.history=History
 menu.p.accountupload=Excel Upload  
 menu.p.changeuserid=Change Manager 
 
-msg.ordertip= Send （'subcripte' or '1'） to subcripte this Publisher
+msg.ordertip= Send \uFF08'subcripte' or '1'\uFF09 to subcripte this Publisher
 msg.hassend=  People has sent
 msg.noreply= This function cann't be supported
-msg.nopermission= Only Establisher can operate
-msg.publisherhascreate= Publisher <{0}> has established success，subcription address is：
-msg.pcreatetip= <{0}> has established success，the content you send will hand out all subscribers
+msg.nopermission= Only establisher can operate
+msg.publisherhascreate= Publisher <{0}> has established success\uFF0Csubcription address is\uFF1A
+msg.pcreatetip= <{0}> has established success\uFF0Cthe content you send will hand out all subscribers
 msg.beoranger= <{0}> become a Group Manager 
 msg.canceladmin= <{0}> cancel your Group Manager Permission
 msg.becanceled= <{0}> has be canceled Group Manager Permission
@@ -30,6 +30,13 @@ msg.changetip= <{0}> become new owner,please come in again update Menu
 
 msg.adminsendtip= This Group Manager invite you join in ,he/she will send content for you soon.
 msg.noemail= Email is not exist
+
+msg.content.voice=[voice]
+msg.content.pic=[pic]
+msg.content.video=[video]
+msg.content.file=[file]
+msg.content.url=[url]
+msg.content.detail=detail
 
 ex.demain.err= <{0}> Demain Error,Only support {1}!
 ex.nocommend= It has not been recommended
@@ -42,12 +49,14 @@ ex.publisherid.null= PublisherId is null
 ex.publisher.null= Publisher is not exist
 ex.publisher.exist= Publisher has exist
 ex.publisher.creating= Publisher is establishing
+ex.publisher.own=Can't subscribe your own publisher
 ex.subcribe.null= User do not subcribe
-ex.subcribe.have= You have subcribed 
+ex.subcribe.have= You have subscribed 
 ex.contentid.null= ContentId is null
 ex.content.null= Content is null
+ex.content.error=Content error:
 ex.name.null= Name is null
 ex.name.invalid= Field names can contain only letters, numbers. 
 ex.tokenInvalid = Token is invalid
 ex.sql.err= Sql error!
-ex.system.err= System error，please connect with email：504963782@qq.com
+ex.system.err= System error\uFF0Cplease connect with email\uFF1A504963782@qq.com
