--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -1,53 +1,62 @@
 name=PiperCN
-menu.a.tip=请使用小助手
-menu.a.mypublisher=我的出版社
-menu.a.gosub=订阅推荐广场
-menu.a.mysublist=我的订阅列表
-mark.a.OrgSubsions=邮件组
-mark.a.PersonSubsions=个人出版社
-menu.a.group=管理邮件群发
-menu.a.createpublisher=创建个人出版社
-menu.p.changeuserid=更换管理员
+menu.a.tip=\u8BF7\u4F7F\u7528\u5C0F\u52A9\u624B
+menu.a.mypublisher=\u6211\u7684\u51FA\u7248\u793E
+menu.a.gosub=\u8BA2\u9605\u63A8\u8350\u5E7F\u573A
+menu.a.mysublist=\u6211\u7684\u8BA2\u9605\u5217\u8868
+mark.a.OrgSubsions=\u90AE\u4EF6\u7EC4
+mark.a.PersonSubsions=\u4E2A\u4EBA\u51FA\u7248\u793E
+menu.a.group=\u7BA1\u7406\u90AE\u4EF6\u7FA4\u53D1
+menu.a.createpublisher=\u521B\u5EFA\u4E2A\u4EBA\u51FA\u7248\u793E
+menu.p.changeuserid=\u66F4\u6362\u7BA1\u7406\u5458
 
-menu.p.tip=请使用小助手
-menu.p.managesub=管理订阅人
-menu.p.history=历史消息
-menu.p.accountupload=Excel账号上传说明
+menu.p.tip=\u8BF7\u4F7F\u7528\u5C0F\u52A9\u624B
+menu.p.managesub=\u7BA1\u7406\u8BA2\u9605\u4EBA
+menu.p.history=\u5386\u53F2\u6D88\u606F
+menu.p.accountupload=Excel\u8D26\u53F7\u4E0A\u4F20\u8BF4\u660E
 
-msg.ordertip=您尚未订阅该出版社 发送 （'订阅' 或 '1'） 订阅该出版社
-msg.hassend= 人已发送
-msg.noreply=回复功能暂不支持
-msg.nopermission=只有该群组管理员有权操作
-msg.publisherhascreate=出版社 <{0}> 创建成功，订阅地址为：
-msg.pcreatetip= <{0}> 创建成功，您发的消息将发达所有订阅者
-msg.beoranger=<{0}> 成为一个组织管理员
-msg.canceladmin=<{0}> 取消了你的管理员权限
-msg.becanceled=<{0}> 被你取消了管理员权限
-msg.submotice= <{0}> 订阅了该出版社
-msg.subsec=订阅成功，作者会在此为你发文章
+msg.ordertip=\u60A8\u5C1A\u672A\u8BA2\u9605\u8BE5\u51FA\u7248\u793E \u53D1\u9001 \uFF08'\u8BA2\u9605' \u6216 '1'\uFF09 \u8BA2\u9605\u8BE5\u51FA\u7248\u793E
+msg.hassend= \u4EBA\u5DF2\u53D1\u9001
+msg.noreply=\u56DE\u590D\u529F\u80FD\u6682\u4E0D\u652F\u6301
+msg.nopermission=\u53EA\u6709\u8BE5\u7FA4\u7EC4\u7BA1\u7406\u5458\u6709\u6743\u64CD\u4F5C
+msg.publisherhascreate=\u51FA\u7248\u793E <{0}> \u521B\u5EFA\u6210\u529F\uFF0C\u8BA2\u9605\u5730\u5740\u4E3A\uFF1A
+msg.pcreatetip= <{0}> \u521B\u5EFA\u6210\u529F\uFF0C\u60A8\u53D1\u7684\u6D88\u606F\u5C06\u53D1\u8FBE\u6240\u6709\u8BA2\u9605\u8005
+msg.beoranger=<{0}> \u6210\u4E3A\u4E00\u4E2A\u7EC4\u7EC7\u7BA1\u7406\u5458
+msg.canceladmin=<{0}> \u53D6\u6D88\u4E86\u4F60\u7684\u7BA1\u7406\u5458\u6743\u9650
+msg.becanceled=<{0}> \u88AB\u4F60\u53D6\u6D88\u4E86\u7BA1\u7406\u5458\u6743\u9650
+msg.submotice= <{0}> \u8BA2\u9605\u4E86\u8BE5\u51FA\u7248\u793E
+msg.subsec=\u8BA2\u9605\u6210\u529F\uFF0C\u4F5C\u8005\u4F1A\u5728\u6B64\u4E3A\u4F60\u53D1\u6587\u7AE0
 
-msg.changetip= <{0}> 成为了该群组新管理员,请退出会话再次进入刷新菜单
+msg.changetip= <{0}> \u6210\u4E3A\u4E86\u8BE5\u7FA4\u7EC4\u65B0\u7BA1\u7406\u5458,\u8BF7\u9000\u51FA\u4F1A\u8BDD\u518D\u6B21\u8FDB\u5165\u5237\u65B0\u83DC\u5355
 
-msg.adminsendtip=管理员邀请您进入该邮件组，之后管理员会在这给您发文档或消息
-msg.noemail=邮箱不存在
+msg.adminsendtip=\u7BA1\u7406\u5458\u9080\u8BF7\u60A8\u8FDB\u5165\u8BE5\u90AE\u4EF6\u7EC4\uFF0C\u4E4B\u540E\u7BA1\u7406\u5458\u4F1A\u5728\u8FD9\u7ED9\u60A8\u53D1\u6587\u6863\u6216\u6D88\u606F
+msg.noemail=\u90AE\u7BB1\u4E0D\u5B58\u5728
 
-ex.demain.err= <{0}> 域错误，只支持 {1}!
-ex.nocommend=还没有被推荐了
-ex.hascommend=已经被推荐
-ex.nosupport=该出版社类型不支持
-ex.needorganizer=需要组织管理权限
-ex.userid.null=用户秘邮号为空
-ex.email.invalid= 非法邮箱!
-ex.publisherid.null=生产源Id为空
-ex.publisher.null=生产源不存在
-ex.publisher.exist=生产源已经存在
-ex.publisher.creating=正在创建中，请耐心等待
-ex.subcribe.null=用户并未订阅
-ex.subcribe.have= 你已经订阅过了
-ex.contentid.null=内容Id为空
-ex.content.null=内容为空
-ex.name.null=名称为空
-ex.name.invalid=名称只能是中文、字母、数字及组合
-ex.tokenInvalid =Token失效
-ex.sql.err=数据库操作错误!
-ex.system.err=系统异常，邮箱：luohongzhou1@syswin.com
+msg.content.voice=[\u8BED\u97F3]
+msg.content.pic=[\u56FE\u7247]
+msg.content.video=[\u89C6\u9891]
+msg.content.file=[\u6587\u4EF6]
+msg.content.url=[\u94FE\u63A5]
+msg.content.detail=\u8BE6\u60C5
+
+ex.demain.err= <{0}> \u57DF\u9519\u8BEF\uFF0C\u53EA\u652F\u6301 {1}!
+ex.nocommend=\u8FD8\u6CA1\u6709\u88AB\u63A8\u8350\u4E86
+ex.hascommend=\u5DF2\u7ECF\u88AB\u63A8\u8350
+ex.nosupport=\u8BE5\u51FA\u7248\u793E\u7C7B\u578B\u4E0D\u652F\u6301
+ex.needorganizer=\u9700\u8981\u7EC4\u7EC7\u7BA1\u7406\u6743\u9650
+ex.userid.null=\u7528\u6237\u79D8\u90AE\u53F7\u4E3A\u7A7A
+ex.email.invalid= \u975E\u6CD5\u90AE\u7BB1!
+ex.publisherid.null=\u751F\u4EA7\u6E90Id\u4E3A\u7A7A
+ex.publisher.null=\u751F\u4EA7\u6E90\u4E0D\u5B58\u5728
+ex.publisher.exist=\u751F\u4EA7\u6E90\u5DF2\u7ECF\u5B58\u5728
+ex.publisher.creating=\u6B63\u5728\u521B\u5EFA\u4E2D\uFF0C\u8BF7\u8010\u5FC3\u7B49\u5F85
+ex.publisher.own=\u4E0D\u80FD\u8BA2\u9605\u81EA\u5DF1\u521B\u5EFA\u7684\u51FA\u7248\u793E
+ex.subcribe.null=\u7528\u6237\u5E76\u672A\u8BA2\u9605
+ex.subcribe.have= \u4F60\u5DF2\u7ECF\u8BA2\u9605\u8FC7\u4E86
+ex.contentid.null=\u5185\u5BB9Id\u4E3A\u7A7A
+ex.content.null=\u5185\u5BB9\u4E3A\u7A7A
+ex.content.error=\u6587\u7AE0\u5185\u5BB9\u9519\u8BEF\uFF1A
+ex.name.null=\u540D\u79F0\u4E3A\u7A7A
+ex.name.invalid=\u540D\u79F0\u53EA\u80FD\u662F\u4E2D\u6587\u3001\u5B57\u6BCD\u3001\u6570\u5B57\u53CA\u7EC4\u5408
+ex.tokenInvalid =Token\u5931\u6548
+ex.sql.err=\u6570\u636E\u5E93\u64CD\u4F5C\u9519\u8BEF!
+ex.system.err=\u7CFB\u7EDF\u5F02\u5E38\uFF0C\u90AE\u7BB1\uFF1Aluohongzhou1@syswin.com
