统一修改消息体

--- a/src/main/resources/i18n/lang_zh_CN.properties
+++ b/src/main/resources/i18n/lang_zh_CN.properties
@@ -1,4 +1,4 @@
-name=PiperCN
+name=Piper
 menu.a.tip=\u8BF7\u4F7F\u7528\u5C0F\u52A9\u624B
 menu.a.mypublisher=\u6211\u7684\u51FA\u7248\u793E
 menu.a.gosub=\u8BA2\u9605\u63A8\u8350\u5E7F\u573A
